--- a/app/views/mario_levels/index.html.haml
+++ b/app/views/mario_levels/index.html.haml
@@ -4,21 +4,27 @@
 %table.pretty
   %th Filter:
 
-
-%table.pretty
-  %tr
-    %th= sortable "name"
-    %th= sortable "created_at", "Uploaded"
-    %th= sortable "fun_rank", "Fun"
-    %th= sortable "puzzle_rank", "Puzzle"
-    %th= sortable "difficulty_rank", "Difficulty"
-    %th= sortable "overall_rank", "Overall"
-  - for level in @levels
+.panel
+  %table.pretty.table-striped.table
     %tr
-      %td=link_to level.name, level
-      %td=time_ago_in_words(level.created_at)
-      %td=level.fun_rank
-      %td=level.puzzle_rank
-      %td=level.difficulty_rank
-      %td=level.overall_rank
+      %th=sortable "l_category_id", "Category"
+      %th{width: "100px"}= sortable "name"
+      %th= sortable "fun_rank", "Fun"
+      %th= sortable "puzzle_rank", "Puzzle"
+      %th= sortable "difficulty_rank", "Difficulty"
+      %th= sortable "level_code", "Level Code"
+      %th= sortable "overall_rank", "Overall"
+      %th= sortable "created_at", "Uploaded"
+
+    - for level in @levels
+      %tr
+        %td=level.l_category.category.capitalize
+        %td=link_to level.name, level
+        %td=level.fun_rank
+        %td=level.puzzle_rank
+        %td=level.difficulty_rank
+        %td=level.level_code
+        %td=level.overall_rank
+        %td=time_ago_in_words(level.created_at)
+
 %p= link_to "Add New Level", new_mario_level_path
