--- a/app/views/mariomaker/_nav_links.html.haml
+++ b/app/views/mariomaker/_nav_links.html.haml
@@ -3,7 +3,7 @@
     =link_to "Find Levels", mario_levels_path
   %li
     =link_to "Add Your Level", new_mario_level_path
-%form.navbar-form.navbar-left{role: "search"}
-  .form-group
-    %input.form-control{placeholder: "Search", type: "text"}/
-  %button.btn.btn-default{type: "submit"} Submit
+-#%form.navbar-form.navbar-left{role: "search"}
+-#  .form-group
+-#    %input.form-control{placeholder: "Search", type: "text"}/
+-#  %button.btn.btn-default{type: "submit"} Submit
