pagination for mario

--- a/app/views/mario_levels/index.html.haml
+++ b/app/views/mario_levels/index.html.haml
@@ -5,6 +5,7 @@
   %th Filter:
 
 .panel
+  =will_paginate @levels
   %table.pretty.table-striped.table
     %tr
       %th=sortable "l_category_id", "Category"
