--- a/app/views/mario_levels/edit.html.haml
+++ b/app/views/mario_levels/edit.html.haml
@@ -1,4 +1,7 @@
 -if @mario_level.created_at > 1.hour.ago
   =render "mario_levels/level_form"
 -else
-  Too much time as passed to edit.  Please edit within 1 hour of posting!
+  Too much time has passed to edit.  Please edit within 1 hour of posting!
+  If you want to edit, head to
+  %a{href: "http://www.cliqboards.com/c/mario-maker-review" }Cliq! Mario Maker
+  and make a post requesting an edit.  I will make exceptions for good reason!
