--- a/app/assets/stylesheets/mariomaker.scss
+++ b/app/assets/stylesheets/mariomaker.scss
@@ -1,7 +1,8 @@
 .mario-header {
   background-color: #efd63b;
-  overflow: hidden;
   height: 170px;
+  position: relative;
+//  background-image: url(mario_side.png);
 }
 
 .mario-nav {
@@ -20,12 +21,13 @@
 }
 
 .mario-nav-links {
+  position:relative;
   margin-right: 40px;
   margin-top: 120px;
 }
 
 .mario-account {
-  margin-right: 75px;
+  float:right;
 }
 
 .mario-rate {
@@ -55,7 +57,6 @@
 
 .mario-container {
   margin-top: 30px;
-  width: 600px;
   margin-left: 100px;
 }
 .mario-table {
@@ -78,7 +79,6 @@
 
 .mario-level-body {
   margin-left: 15px;
-  min-width: 540px;
   a {
     font-size: 18px;
   }
@@ -86,7 +86,6 @@
 
 .mario-level-owner {
   vertical-align: bottom;
-  min-width: 540px;
 
 }
 
@@ -150,3 +149,23 @@
   padding-right: 10px;
 }
 
+.mario-brand {
+  padding-top: 20px;
+  float:left;
+}
+
+@media (max-width: 768px) {
+  .navbar-mario {
+    display: none;
+  }
+  .navbar-2 {
+    left: 220px;
+    bottom: 30px;
+    position:absolute;
+    display: block!important;
+  }
+}
+
+.mario-welcome {
+  margin-top: 30px;
+}
