--- a/app/views/mariomaker/_account.html.haml
+++ b/app/views/mariomaker/_account.html.haml
@@ -9,7 +9,7 @@
         Create a Username
       %span.caret
     %ul.dropdown-menu{role:"menu"}
-      %li= link_to "Profile", user_path(current_user)
+      %li= link_to "Profile", marioprofile_user_path(current_user)
       %li= link_to "Sign out", destroy_user_session_path
       - if can? :manage, @all
         %li= link_to "Admin", admin_path
