--- a/app/views/mario_levels/_mario_level_list.html.haml
+++ b/app/views/mario_levels/_mario_level_list.html.haml
@@ -7,6 +7,8 @@
           =check_mario_image(level)
       .col-sm-9.mario-level-body
         .col-sm-9.pull-left
+          - if mario_level_complete?(level)
+            =image_tag('complete.png', size: "10x10")
           =link_to level.name, level
           %p.mario-normal-text
             =level.description
