--- a/app/views/mario_levels/_mario_level_list.html.haml
+++ b/app/views/mario_levels/_mario_level_list.html.haml
@@ -16,6 +16,9 @@
           Created by:
           =link_to level.user.username, marioprofile_user_path(level.user)
         .col-sm-9.pull-left
+          -if can_rate?(level)
+            .mario-rate
+              =link_to "Rate", new_mario_rating_path(level)
           .level-id
             id
           =level.level_code
