--- a/app/views/mario_levels/show.html.haml
+++ b/app/views/mario_levels/show.html.haml
@@ -20,7 +20,7 @@
         .mario-owned
           You own this level!
         =link_to "edit?", edit_mario_level_path(@mario_level)
-    -if can_rate?
+    -if can_rate?(@mario_level)
       .mario-rate
         =link_to "Rate", new_mario_rating_path(@mario_level)
     -else
