fixed pagination for mario

--- a/app/views/mario_levels/_mario_level_list.html.haml
+++ b/app/views/mario_levels/_mario_level_list.html.haml
@@ -1,4 +1,5 @@
-=will_paginate @levels
+.pagination-container
+  =paginate @levels
 -@levels.each do |level|
   .row.mario-level-row
     .col-sm-12.mario-level-span
