small ui change to levels

--- a/app/assets/stylesheets/mariomaker.scss
+++ b/app/assets/stylesheets/mariomaker.scss
@@ -172,6 +172,14 @@
     position:absolute;
     display: block!important;
   }
+  .mario-container {
+    margin-top: 10px;
+    margin-left: 10px;
+  }
+
+  .mario-level-image {
+    float:left
+  }
 }
 
 .mario-welcome {
