--- a/app/assets/stylesheets/mariomaker.scss
+++ b/app/assets/stylesheets/mariomaker.scss
@@ -152,6 +152,16 @@
   margin-right: 5px;
 }
 
+.mario-owned {
+  color: white;
+  font-weight: bold;
+  background-color: #6a5d54;
+  border-radius: 3px;
+  padding: 0px 5px;
+  margin-right: 5px;
+  margin-bottom: 5px;
+}
+
 .level-filter {
   float:left;
   padding-right: 10px;
@@ -190,4 +200,8 @@
   float:left;
   margin-top:2px;
   margin-right: 5px;
+}
+
+.fb-share {
+  margin-bottom: 5px;
 }
