--- a/app/views/layouts/mariomaker.html.haml
+++ b/app/views/layouts/mariomaker.html.haml
@@ -4,6 +4,8 @@
     %meta(charset="utf-8")
     %meta(http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1")
     %meta(name="viewport" content="width=device-width, initial-scale=1.0")
+    -if content_for?(:head)
+      = yield(:head)
     %title= content_for?(:title) ? yield(:title) : "Welcome to Mario Maker Review"
     %meta{name:"google-site-verification", content:"dh0g5voQYpDDuZtt1i1KVaVJDBCw1wEEZ74R9djqWMQ"}
     = csrf_meta_tags
