--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,16 +4,14 @@
     %meta(charset="utf-8")
     %meta(http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1")
     %meta(name="viewport" content="width=device-width, initial-scale=1.0")
-    -if @cliq
-      -@title = @cliq.name
-    -else
-      -@title = "Welcome to Cliq"
-    %title= content_for?(:title) ? yield(:title) : "Cliq! - #{@title} - #{@topic.subject if @topic}"
+    -if content_for?(:head)
+      = yield(:head)
+    %title= content_for?(:title) ? yield(:title) : "Welcome to Mario Maker Review"
     %meta{name:"google-site-verification", content:"dh0g5voQYpDDuZtt1i1KVaVJDBCw1wEEZ74R9djqWMQ"}
     = csrf_meta_tags
     / Le HTML5 shim, for IE6-8 support of HTML elements
     /[if lt IE 9]
-      = javascript_include_tag "//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6.1/html5shiv.js"
+    = javascript_include_tag "//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6.1/html5shiv.js"
     = stylesheet_link_tag "application", :media => "all"
     = favicon_link_tag 'apple-touch-icon-144x144-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png', :sizes => '144x144'
     = favicon_link_tag 'apple-touch-icon-114x114-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png', :sizes => '114x114'
@@ -23,24 +21,10 @@
     = javascript_include_tag "application"
     %link{href:"//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css", rel:"stylesheet"}
     = yield :head
-    %body
-      = render "favorites/nav" if current_user
-      .cliq-bar
-        #fb-root
-        = render "layouts/application/cliq_bar"
-      .container
-        = render "favorites/navbar" if current_user
-        .row
-          .col-lg-12.col-md-12.col-sm-12
-            = bootstrap_flash
-            = yield
-        .panel
-          .temp-badge
-            %h5 temp badge area:
-            -if current_user
-              -current_user.badges.each do |badge|
-                %li=badge.name
-      %footer
-        %p &copy; Company 2014
-        =render "shared/google_analytics"
+%body
+  =render "mariomaker/nav"
+  .container
+    =yield
+%footer
+  =render "shared/google_analytics"
 
