--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,9 +4,11 @@
     %meta(charset="utf-8")
     %meta(http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1")
     %meta(name="viewport" content="width=device-width, initial-scale=1.0")
-    -if content_for?(:head)
-      = yield(:head)
-    %title= content_for?(:title) ? yield(:title) : "Welcome to Mario Maker Review"
+    -if @cliq
+      -@title = @cliq.name
+    -else
+      -@title = "Welcome to Mario Maker"
+    %title= content_for?(:title) ? yield(:title) : "#{@title} - #{@topic.subject if @topic}"
     %meta{name:"google-site-verification", content:"dh0g5voQYpDDuZtt1i1KVaVJDBCw1wEEZ74R9djqWMQ"}
     = csrf_meta_tags
     / Le HTML5 shim, for IE6-8 support of HTML elements
